# vaultwares-flows

./: README.md  main.py  pyproject.toml  requirements-ai.txt  requirements.txt
app/: main_window.py
app/canvas/: edge.py  minimap.py  node.py  scene.py  view.py
app/nodes/: registry.py
app/panels/: node_library.py  properties.py
app/theme/: palette.py
