[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "vaultwares-flows"
version = "0.1.0"
description = "Visual node-based workflow builder with AI and diffusion model support"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
dependencies = ["PySide6>=6.6.0"]

[project.optional-dependencies]
ai = [
    "torch>=2.1.0",
    "torchvision",
    "xformers>=0.0.23",
    "diffusers>=0.25.0",
    "transformers>=4.35.0",
    "accelerate>=0.25.0",
    "safetensors",
    "omegaconf",
    "einops",
]
dev = ["pytest", "pytest-qt", "ruff"]

[project.scripts]
vaultwares-flows = "main:main"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I"]
